examples/i18n/contents/error/404/fr.inc.php
<p>
Page non trouvée.
</p>
